# Crawling-Project

./: crawling_main.py  dbconfig.py  main.py  new_main.py  pyproject.toml  restaurantreview.py  restaurantscraper.py  reviewscraper.py
src/: main.py  new_main.py  restaurant_review.py  review_scraper.py  sequence diagram.mmd  webcrawler.py
src/databases/: dbconfig.py
